--- a/4-Class_Dependent_Specifications/12_boiler.yml
+++ b/4-Class_Dependent_Specifications/12_boiler.yml
@@ -1,7 +1,7 @@
 ---
 $schema: "http://json-schema.org/draft-07/schema#"
 title: boiler
-$id: https://raw.githubusercontent.com/TW-ASMP/TWmaximoConfig/main/4-Class_Dependent_Specifications/12_boiler.yml
+$id: https://raw.githubusercontent.com/TW-ASMP/TWDM/main/4-Class_Dependent_Specifications/12_boiler.yml
 type: object
 
 $comment: >
@@ -15,15 +15,11 @@ properties:
       - type: string
     description: Indicates the fuel source for the boiler
     enum:
-      - "Natural Gas"
-      - "Biogas / Digester Gas"
-      - "Propane"
-      - "Electric"
-      - "Fuel Oil"
-
-    $comment: 
-
-  #========================
+      - "natural gas"
+      - "biogas / digester gas"
+      - "propane"
+      - "electric"
+      - "fuel oil"
 
   boiled_medium:
   
@@ -36,20 +32,12 @@ properties:
       - Steam
       - Glycol
 
-    $comment: 
-
-  #========================
-
   heat_rate:
   
     oneOf:
       - type: null
       - type: number
     description: Indicates the rated heat rate in the boiler in kilo Watts
-
-    $comment: 
-
-  #========================
 
   max_pressure:
   
@@ -58,20 +46,12 @@ properties:
       - type: number
     description: Indicates the maximum operating pressure for the boiler in psi
 
-    $comment: 
-
-  #========================
-
   max_temperature:
   
     oneOf:
       - type: null
       - type: number
     description: Indicates the maximum operating temperature for the boiler in degrees celsius
-
-    $comment: 
-
-  #========================
 
   heated_surface:
   
@@ -80,10 +60,6 @@ properties:
       - type: number
     description: Indicates the heating surface area of the boiler in meters squared
 
-    $comment: 
-
-  #========================
-
   capacity:
   
     oneOf:
@@ -91,17 +67,9 @@ properties:
       - type: number
     description: Indicates the size capacity of the boiler in Litres
 
-    $comment: 
-
-  #========================
-
-  tssa_crn:
+  TSSA_CRN:
   
     oneOf:
       - type: null
       - type: string
     description: Indicates the CRN number issued by the TSSA
-
-    $comment: 
-
-  #========================
