--- a/1-Schemas/A-entity_record_schema/04_org-chart_group.yml
+++ b/1-Schemas/A-entity_record_schema/04_org-chart_group.yml
@@ -1,11 +1,14 @@
 ---
 $schema: "http://json-schema.org/draft-07/schema#"
 title: org-chart group
-$id: https://raw.githubusercontent.com/TW-ASMP/TWmaximoConfig/main/1-Schemas/A-entity_record_schema/04_org_schema.yml
+$id: https://raw.githubusercontent.com/TW-ASMP/TWDM/main/1-Schemas/A-entity_record_schema/04_org_schema.yml
 type: object
 properties:
 
   ID:
+
+    type: string
+    description: is the unique ID 
   
   org-chart_group_name:
 
@@ -14,17 +17,17 @@ properties:
   parent_org-chart_group:
 
     oneOf:
-      - $ref: "./04_org_or_group.yml"
+      - $ref: "./04_org-chart_group.yml"
       - type: null
 
   class:
 
     $ref: B-entity_class_object_schema/04_org_class.yml
 
-  specifications:
+  specification_data:
 
     type: object
-    description: is a set of properties applicable to the class. 
+    description: is a set of specification property data. (The applicable properties are dependent on the definition made in the chosen class.)
 
   leader:
 
@@ -43,20 +46,21 @@ properties:
     description: indicates that this org-chart group maps to a particular org-chart group (a native Maximo object)
     $ref: MaximoOrgObject
 
-  duplicate record of:
+  equivalent_to_Maximo_crew:
 
-    oneOf: 
-      - type: array
-        items:
-          $ref: "./04_org_or_group.yml"
-      - type: null
+    description: indicates that this org-chart group maps to a particular org-chart group (a native Maximo object)
+    $ref: MaximoCrewObject
 
-  record retirement information:
+  # RECORD PROPERTIES
 
-    $ref: "./00_common_definitions.yml#/definitions/record retirement definition"
 
-supervisor_group:
+  duplicate_record_of:
 
-crew:
+    $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def"
+
+  record_retirement_information:
+
+    $ref: "./00_common_definitions.yml#/definitions/record_retirement_def"
+
 
   
