--- a/1-Schemas/A-entity_record_schema/07_service_item_master.yml
+++ b/1-Schemas/A-entity_record_schema/07_service_item_master.yml
@@ -1,6 +1,18 @@
 $schema: "http://json-schema.org/draft-07/schema#"
 title: tool item master
-$id: https://raw.githubusercontent.com/TW-ASMP/TWmaximoConfig/main/1-Schemas/A-entity_record_schema/07_service_item_master.yml.yml
+$id: https://raw.githubusercontent.com/TW-ASMP/TWDM/main/1-Schemas/A-entity_record_schema/07_service_item_master.yml.yml
 type: object
 
-# To be specified in the future
+properties:
+
+  # RECORD PROPERTIES
+
+  duplicate_record_of:
+
+    $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def"
+
+  record_retirement_information:
+    
+    $ref: "./00_common_definitions.yml#/definitions/content_entity_record_retirement_def"
+
+# Rest to be specified in the future
