--- a/1-Schemas/A-entity_record_schema/11_warranty.yml
+++ b/1-Schemas/A-entity_record_schema/11_warranty.yml
@@ -1,60 +1,62 @@
 $schema: http://json-schema.org/draft-07/schema#
 title: Warranty
-$id: https://raw.githubusercontent.com/TW-ASMP/TWmaximoConfig/main/1-Schemas/A-entity_record_schema/12_warranty.yml
+$id: https://raw.githubusercontent.com/TW-ASMP/TWDM/main/1-Schemas/A-entity_record_schema/12_warranty.yml
 type: object
 
 properties:
   
   ID:
-  #---------------------------------------
+
     description: the unique identifier for the warranty contract
     type: string  
 
   description:
-  #---------------------------------------
+
     description: a brief summary of the warranty contract
     type: string
 
   vendor:
-  #---------------------------------------
+
     description: identifies the vendor or provider of the warranty
     $ref: MaximoCompanyObject
 
   warranty_start_date:
-  #---------------------------------------
+
     description: the first effective day of the warranty
     oneOf: 
       - type: null
-      - type: number
+      - type: string
+        format: date
   
   warranty_expiration_date:
-  #---------------------------------------
+
     description: the last effective date of the warranty
     oneOf: 
       - type: null
-      - type: number
+      - type: string
+        format: date
 
   covers_labour:
-  #---------------------------------------
+
     description: indicates that the vendor is responsible for providing and/or covering the cost of labour
     type: boolean
 
   covers_parts:
-  #---------------------------------------
+
     description: indicates that the vendor is responsible for providing and/or covering the cost of parts
     type: boolean
 
   covers_asset_roles:
-  #---------------------------------------
+
     description: the list of roles or more specifically the assets installed in the roles covered by the warranty
     oneOf: 
       - type: null
       - type: array
         items:
-          $ref: "./02_asset_role.yml"
+          $ref: "./02_role.yml"
   
   covers_assets:
-  #---------------------------------------
+
     description: the list of assets covered by the warranty (any parts in the inventory covered by the warranty must be associated with an asset record)
     oneOf: 
       - type: null
@@ -63,10 +65,20 @@ properties:
           $ref: "./01_asset.yml"
 
   contract_document:
-  #---------------------------------------
+
     description: the PDF version of the contract document.
     oneOf: 
       - type: null
       - type: array
         items:
-          $ref: Maximo_DOCLINKS
+          $ref: "./00_common_definitions.yml/attachment_def"
+
+# RECORD PROPERTIES
+
+  duplicate_record_of:
+
+    $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def"
+
+  record_retirement_information:
+    
+    $ref: "./00_common_definitions.yml#/definitions/content_entity_record_retirement_def"
