--- a/1-Schemas/A-entity_record_schema/12_service_contract.yml
+++ b/1-Schemas/A-entity_record_schema/12_service_contract.yml
@@ -1,50 +1,52 @@
 $schema: http://json-schema.org/draft-07/schema#
 title: Service Contract
-$id: https://raw.githubusercontent.com/TW-ASMP/TWmaximoConfig/main/1-Schemas/A-entity_record_schema/13_service_contract.yml
+$id: https://raw.githubusercontent.com/TW-ASMP/TWDM/main/1-Schemas/A-entity_record_schema/13_service_contract.yml
 type: object
 
 properties:
   
   ID:
-  #---------------------------------------
+
     description: the unique identifier for the contract
     type: string  
 
   description:
-  #---------------------------------------
+
     description: a brief summary of the contract
     type: string
 
   vendor:
-  #---------------------------------------
+
     description: identifies the vendor or provider
     $ref: MaximoCompanyObject
 
   start_date:
-  #---------------------------------------
+
     description: the first effective day
     oneOf: 
       - type: null
-      - type: number
+      - type: string
+        format: date
   
   expiration_date:
-  #---------------------------------------
+
     description: the last effective date
     oneOf: 
       - type: null
-      - type: number
+      - type: string
+        format: date
 
   covers_asset_roles:
-  #---------------------------------------
+
     description: the list of roles or more specifically the assets installed in the roles covered by the contract
     oneOf: 
       - type: null
       - type: array
         items:
-          $ref: "./02_asset_role.yml"
+          $ref: "./02_role.yml"
   
   covers_assets:
-  #---------------------------------------
+
     description: the list of assets covered by the contract (any parts in the inventory covered by the contract must be associated with an asset record)
     oneOf: 
       - type: null
@@ -61,10 +63,15 @@ properties:
           $ref: "./32_job_plan.yml"
 
   contract_document:
-  #---------------------------------------
-    description: the PDF version of the contract document.
-    oneOf: 
-      - type: null
-      - type: array
-        items:
-          $ref: Maximo_DOCLINKS
+
+    $ref: "./00_common_definitions.yml#/definitions/attachment_def"
+
+  # RECORD PROPERTIES
+
+  duplicate_record_of:
+
+    $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def"
+
+  record_retirement_information:
+    
+    $ref: "./00_common_definitions.yml#/definitions/content_entity_record_retirement_def"
