--- a/1-Schemas/A-entity_record_schema/33_PM.yml
+++ b/1-Schemas/A-entity_record_schema/33_PM.yml
@@ -1,7 +1,7 @@
 ---
 $schema: http://json-schema.org/draft-07/schema#
 title: PM
-$id: https://raw.githubusercontent.com/TW-ASMP/TWmaximoConfig/main/1-Schemas/A-entity_record_schema/33_PM.yml
+$id: https://raw.githubusercontent.com/TW-ASMP/TWDM/main/1-Schemas/A-entity_record_schema/33_PM.yml
 type: object
 
 properties:
@@ -12,28 +12,20 @@ properties:
     type: string
     $comment: This ID is useful for referencing, even when its name changes. 
 
-  # ==========
-
   name:
 
     description: a short name for the PM, given by the creator of the PM.
     type: string
 
-  # ==========
-
   operational_unit:
 
     description: indicates Toronto Water's operational unit, on the org-chart group hierarchy, such as Waste and Storm Water Pumping (symbol - WASP) or Humber Wastewater Treatment Plant (symbol - THR).
-    $ref: "./04_org_or_group.yml"
-  
-  # ==========
+    $ref: "./04_org-chart_group.yml"
 
   supervisor_group:
 
     description: indicates a sub-group of the operational unit, that is led by a supervisor who is accountable for the performance of the specified work. 
-    $ref: "./04_org_or_group.yml"
-    
-  # ==========
+    $ref: "./04_org-chart_group.yml"
   
   crew_assignment:
 
@@ -41,11 +33,9 @@ properties:
     
     oneOf:
       - type: null
-      - $ref: "./04_org_or_group.yml"
+      - $ref: "./04_org-chart_group.yml"
     
     comment: This value will be determined by (and must be consistent with) the maintainer_org-chart_group value - situated at a lower level of the org-chart group hierarchy
-
-  # ==========
 
   member_of_PM_set:
 
@@ -56,7 +46,6 @@ properties:
       - $ref: "#/definitions/PM_set"
     rule to add []: only applicable to higher-level PM
 
-  # ==========
   
   Avantis_PM:
 
@@ -70,8 +59,6 @@ properties:
     comment: This field can be eliminated in the future.
 
     work_entity_harmonization: WR(x), WO(x), JP(x)
-
-  # ==========
   
   processes_covered_by_PM:
 
@@ -90,37 +77,28 @@ properties:
     
     rule to add []: only applicable to higher-level PM
 
-
-  
-  # Work Specification at a High-level
-  #========================================
+  # WORK SPECIFICATION AT A HIGH-LEVEL
 
   role_to_work_on:
     
     description: indicates role at which the specified must be performed.
     oneOf:
       - type: null
-      - $ref: "../A-entity_record_schema/02_asset_role.yml"
+      - $ref: "../A-entity_record_schema/02_role.yml"
 
-  #================
-  
   asset:
 
     description: indicates the asset that is being maintained.
     oneOf:
       - type: null
       - $ref: "../A-entity_record_schema/01_asset.yml"
-  
-  # ==========
 
   job_plan:
   
     description: specifies the job plan for the PM, if there is no further specification within the route.
     
+  # PM STRUCTURE SPECIFICATION
 
-  # PM Structure Specification
-  #========================================
-  
   parent:
 
     description: indicates the more comprehensive PM, usually a shut-down PM, that this PM is a part of.
@@ -130,9 +108,6 @@ properties:
       - $ref: "../A-entity_record_schema/33_PM.yml"
     
     $comment: PMs should be organized into a PM-set when they are meant to be performed at different times.  For example the PMs for substation line 1 and line 2 maintenance are performed on alternating years. They can be organize into a PM-Set named Main Substation Maintenance. PMs should be organized under a parent PM if they are parts of the same larger continuous process - represented by the parent - such as the winter shutdown maintenance of island treatment plant. 
-
-  
-  # ==========
 
   route:
     
@@ -153,7 +128,7 @@ properties:
           role:
             oneOf: 
               - type: null
-              - $ref: "./02_asset_role.yml"
+              - $ref: "./02_role.yml"
 
           job_plan:
             oneOf:
@@ -162,18 +137,15 @@ properties:
     
     $comment: the implementation could be done with Maximo route object.    
 
-  #========================================
-  # Resources
-  #----------------------------------------
-  # Note: Travel time and preparation time are not being recorded explicitly on the PM. Instead they could be recorded as contributory work in the job plan route
-  #========================================
+  # RESOURCES
+
+  #Note: 
+    # content: Travel time and preparation time are not being recorded explicitly on the PM. Instead they could be recorded as contributory work in the job plan route
 
   estimated_duration:
 
     description: is the estimated time to complete the activity in the job plan
     $ref: "./00_common_definitions.yml#/definitions/frequency_interval_definition"
-   
-  #================
   
   parts_or_material_requirements:
     
@@ -184,8 +156,6 @@ properties:
         items:
           $ref: "./00_common_definitions.yml#/definitions/item_requirement_definition"
 
-  #================
-
   tool_requirements:
   
     description: identifies the tools required to complete a work order generated from the PM.
@@ -195,9 +165,6 @@ properties:
         items:
           $ref: "./00_common_definitions.yml#/definitions/tool_requirements_definition"
 
-
-  #================
-  
   skill_and_trade_requirements:
   
     description: identifies the trades and qualifications of each trade needed to complete the work.
@@ -207,8 +174,6 @@ properties:
       items:
         $ref: "./00_common_definitions.yml#/definitions trade_requirement_definition"
 
-  #================
-  
   service_requirements:
 
     description: identifies (contracted) service needed to complete to complete a work order generated from the PM.
@@ -219,11 +184,11 @@ properties:
           $ref: "./00_common_definitions.yml#/definitions/service_requirement_definition"
 
 
-  #========================================
+
   # Work Triggering Specification
-  #---------------------------------------
+
   # Note: the specification is not complete for data mapping purposes, it is complete for requirement gather
-  #========================================
+
 
   next_due_date_based_on:
   
@@ -239,16 +204,25 @@ properties:
     - $ref: "#/definitions/time-based_trigger_specification"
     - $ref: "#/definitions/meter-based_trigger_specification"
 
-
-  #========================================
-  # Legislative Designation
-  #========================================
   
+  # LEGISLATIVE DESIGNATION
+
   compliance_level:
 
     $ref: "./00_common_definitions.yml#/definitions/compliance_class"
 
     work_entity_harmonization: WR(x), WO(_), JP(_)
+  
+  
+  # RECORD PROPERTIES
+
+  duplicate_record_of:
+
+    $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def"
+
+  record_retirement_information:
+    
+    $ref: "./00_common_definitions.yml#/definitions/content_entity_record_retirement_def"
 
 ##########################################################
 # LOCAL OBJECT DEFINITIONS
@@ -259,20 +233,19 @@ definitions:
   time-based_trigger_specification:
     
     next_due_date:
-      type: number
+      type: string
+      format: date
     
     frequency_interval:
       $ref: "./00_common_definitions.yml#/definitions/frequency_interval_definition"
 
-  #================
-
   meter-based_trigger_specification:
     
     next_meter_reading:
-        type: number
+      type: string
+      format: date
     
     meter_condition:
       oneOf:
         - type: null
         - $ref: "./00_common_definitions.yml#/definitions/meter_condition_definition"
-  
