--- a/1-Schemas/A-entity_record_schema/41_meter.yml
+++ b/1-Schemas/A-entity_record_schema/41_meter.yml
@@ -1,7 +1,9 @@
 $schema: "http://json-schema.org/draft-07/schema#"
 title: Meter
-$id: https://raw.githubusercontent.com/TW-ASMP/TWmaximoConfig/main/A-entity_record_schema/41_meter.yml
+$id: https://raw.githubusercontent.com/TW-ASMP/TWDM/main/A-entity_record_schema/41_meter.yml
 
 properties:
 
-  ID:
+  duplicate_record_of:
+
+    $ref: "./00_common_definitions.yml#/definitions/duplicate_record_def"
