--- a/1-Schemas/B-entity_class_object_schema/02_role_class.yml
+++ b/1-Schemas/B-entity_class_object_schema/02_role_class.yml
@@ -1,7 +1,7 @@
 ---
 $schema: "http://json-schema.org/draft-07/schema#"
 title: role classification object
-$spec_ID: B-entity_class_object_schema/02_asset_role_class.yml
+$spec_ID: B-entity_class_object_schema/02_role_classification.md
 type: object
 
 #############################################################
@@ -15,7 +15,7 @@ properties:
     #inherit the definitions and rules from th "/1-Schemas/B-entity_class_object_schema/00_common_class_definitions.yml"
 
   parent_class:
-    $ref: B-entity_class_object_schema/02_asset_role_class.yml
+    $ref: B-entity_class_object_schema/02_role_classification.md
     sort order: 1-30
 
   discrete_asset_role:
