--- a/4-Class_Dependent_Specifications/01_pump.yml
+++ b/4-Class_Dependent_Specifications/01_pump.yml
@@ -1,7 +1,7 @@
 ---
 $schema: "http://json-schema.org/draft-07/schema#"
 title: pump
-$id: https://raw.githubusercontent.com/TW-ASMP/TWmaximoConfig/main/4-Class_Dependent_Specifications/01_pump.yml
+$id: https://raw.githubusercontent.com/TW-ASMP/TWDM/main/4-Class_Dependent_Specifications/01_pump.yml
 type: object
 
 $comment: >
@@ -9,137 +9,96 @@ $comment: >
 properties:
 
   orientation:
-  
+
     oneOf:
       - type: null
       - type: string
     description: Indicates how the pump is oriented in 3D space
     enum:
-      - Horizontal
-      - Vertical
-      - Angled
-      - Inverted
-
-    $comment: |
-
-  #========================
+      - "horizontal"
+      - "vertical"
+      - "angled"
+      - "inverted"
 
   variable_speed:
-  
+
     oneOf:
       - type: null
       - type: boolean
-    description: Indicates the if the pump has varialbe speed control 
-
-    $comment: |
-
-  #========================
+    description: Indicates the if the pump has variable speed control 
 
   pump_type:
-  
+
     oneOf:
       - type: null
       - type: string  
     description: Indicates the pump type
     enum:
-      - "Dynamic, Centrifugal"
-      - "Dynamic, Axial"
-      - "Reciprocating, Piston or Plunger"
-      - "Reciprocating, Diaphram"
-      - "Rotary, Vane"
-      - "Rotary, Piston"
-      - "Screw Pump"
-      - "Gear Pump"
+      - "dynamic, centrifugal"
+      - "dynamic, axial"
+      - "reciprocating, piston or plunger"
+      - "reciprocating, diaphragm"
+      - "rotary, vane"
+      - "rotary, piston"
+      - "screw pump"
+      - "gear pump"
 
-    $comment: |
+  max_RPM:
 
-  #========================
-  
-  max_rpm:
-  
     oneOf:
       - type: null
       - type: number
     description: Indicates the maximum RPM for the pump
 
-    $comment: |
-
-  #========================
-    
   max_flow:
-  
+
     oneOf:
       - type: null
       - type: number
     description: Indicates the maximum flow rate at the maximum RPM for the pump in L/s
-
-    $comment: |
-
-  #========================
-
   
   pump_head:
-  
+
     oneOf:
       - type: null
       - type: number
     description: Indicates the pressure head for the pump in metres
 
-    $comment: |
-
-  #========================  
-
   submersible:
-  
+
     oneOf:
       - type: null
       - type: boolean
     description: Indicates if the pump is submersible
 
-    $comment: |
-
-  #========================
-
-  
   drive_coupling:
-  
+
     oneOf:
       - type: null
       - type: string
     description: Indicates how the drive and pump are coupled together
     enum:
-      - "Direct Drive"
-      - "Belt Drive"
-      - "Gear Drive"
-      - "Flexible"
-      - "Chain Drive"
-      - "Hydraulic"
-
-    $comment: |
-
-  #========================
+      - "direct drive"
+      - "belt drive"
+      - "gear drive"
+      - "flexible"
+      - "chain drive"
+      - "hydraulic"
 
   drive:
-  
+
     oneOf:
       - type: null
       - type: string
-    description: Indicates what the mechanicly drives the pump
+    description: Indicates what the mechanically drives the pump
     enum:
-      - "Electric Motor"
-      - "Engine"
-
-    $comment: |
-
-  #========================
+      - "electric motor"
+      - "engine"
 
   sealed_bearings:
-  
+
     oneOf:
       - type: null
       - type: boolean
     description: Indicates if the pump has sealed bearings
 
-    $comment: |
-
-  #========================
