--- a/4-Class_Dependent_Specifications/05_starter.yml
+++ b/4-Class_Dependent_Specifications/05_starter.yml
@@ -1,71 +1,49 @@
 ---
 $schema: "http://json-schema.org/draft-07/schema#"
 title: starter
-$id: https://raw.githubusercontent.com/TW-ASMP/TWmaximoConfig/main/4-Class_Dependent_Specifications/05_starter.yml
+$id: https://raw.githubusercontent.com/TW-ASMP/TWDM/main/4-Class_Dependent_Specifications/05_starter.yml
 type: object
-
-$comment: >
 
 properties:
 
   voltage_rating:
-  
+
     oneOf:
       - type: null
       - type: number
     description: Indicates the continuous voltage rating for the starter in Volts
 
-    $comment: 
-
-  #========================
-
   current_rating:
-  
+
     oneOf:
       - type: null
       - type: number
     description: Indicates the continuous current rating for the starter in Amps
 
-    $comment: 
+  has_VFD_function:
 
-  #========================
-
-  vfd_present:
-  
     oneOf:
       - type: null
       - type: boolean
     description: Indicates the presence of a variable frequency drive within the starter
 
-    $comment: 
+  has_soft_starting_function:
 
-  #========================
-
-  soft_start_present:
-  
     oneOf:
       - type: null
       - type: boolean
     description: Indicates the function of a soft starter in  the starter
 
-    $comment: 
+  main_contactor_type:
 
-  #========================
-
-  main_contactor:
-  
     oneOf:
       - type: null
       - type: string
-    description: Indicates the ansi type for the valve
+    description: Indicates the ANSI type for the valve
     enum:
-      - "Air Insulated"
-      - "Air Insulated, Air Blast"
-      - "Vacuum Insulated"
-      - "Oil Insultated"
-      - "Gas Insultated"
-
-    $comment: 
-
-  #========================
+      - "air insulated"
+      - "air insulated, air blast"
+      - "vacuum insulated"
+      - "oil insulated"
+      - "gas insulated"
   
