--- a/4-Class_Dependent_Specifications/10_generator.yml
+++ b/4-Class_Dependent_Specifications/10_generator.yml
@@ -1,13 +1,19 @@
 ---
 $schema: "http://json-schema.org/draft-07/schema#"
 title: generator
-$id: https://raw.githubusercontent.com/TW-ASMP/TWmaximoConfig/main/4-Class_Dependent_Specifications/10_generator.yml
+$id: https://raw.githubusercontent.com/TW-ASMP/TWDM/main/4-Class_Dependent_Specifications/10_generator.yml
 type: object
 
 $comment: >
 
 properties:
 
+  fire_life-safety_elevator:
+    
+    oneOf:
+    - type: null
+    - type: boolean
+    description: Indicates if the device directly supports any part of the fire suppression or any life safety systems
 
   mobile:
   
@@ -16,20 +22,12 @@ properties:
       - type: boolean
     description: Indicates if the generator is mobile
 
-    $comment: 
-
-  #========================
-
   power_rated:
   
     oneOf:
       - type: null
       - type: number
     description: Indicates the power rating in kilo watts
-
-    $comment: 
-
-  #========================
 
   voltage_rating:
   
@@ -38,10 +36,6 @@ properties:
       - type: number
     description: Indicates the capacity rating for the generator in Volts
 
-    $comment: 
-
-  #========================
-
   drive_type:
   
     oneOf:
@@ -49,13 +43,9 @@ properties:
       - type: string
     description: Indicates the type of drive 
     enum:
-      - "Engine, Diesel or Bio-diesel"
-      - "Engine, Natural Gas"
-      - "Turbine"
-
-    $comment: 
-
-  #========================
+      - "engine, diesel or bio-diesel"
+      - "engine, natural gas"
+      - "turbine"
 
   brushless:
   
@@ -64,20 +54,12 @@ properties:
       - type: boolean
     description: Indicates the presence of brushes within the generator
 
-    $comment: 
-
-  #========================
-
   test_load:
   
     oneOf:
       - type: null
       - type: boolean
     description: Indicates the presence of an electrical connection to attach a test load
-
-    $comment: 
-
-  #========================
 
   drive_coupling:
   
@@ -86,16 +68,12 @@ properties:
       - type: string
     description: Indicates the type of drive coupling
     enum:
-      - "Direct Drive"
-      - "Belt Drive"
-      - "Gear Drive"
-      - "Flexible"
-      - "Chain Drive"
-      - "Hydraulic"
-
-    $comment: 
-
-  #========================
+      - "direct drive"
+      - "belt drive"
+      - "gear drive"
+      - "flexible"
+      - "chain drive"
+      - "hydraulic"
 
   sealed_bearings:
   
@@ -103,7 +81,3 @@ properties:
       - type: null
       - type: boolean
     description: Indicates the presence of sealed of shielded bearings
-
-    $comment: 
-
-  #========================
