--- a/4-Class_Dependent_Specifications/13_pressure_vessel.yml
+++ b/4-Class_Dependent_Specifications/13_pressure_vessel.yml
@@ -1,7 +1,7 @@
 ---
 $schema: "http://json-schema.org/draft-07/schema#"
 title: pressure_vessel
-$id: https://raw.githubusercontent.com/TW-ASMP/TWmaximoConfig/main/4-Class_Dependent_Specifications/13_pressure_vessel.yml
+$id: https://raw.githubusercontent.com/TW-ASMP/TWDM/main/4-Class_Dependent_Specifications/13_pressure_vessel.yml
 type: object
 
 $comment: >
@@ -15,17 +15,13 @@ properties:
       - type: string
     description: Indicates the medium within the pressure vessel
     enum:
-      - "Water"
-      - "Steam"
-      - "Glycol"
-      - "Refrigerant"
-      - "Compressed Air"
-      - "Digester Gas"
-      - "Ozone"
-
-    $comment: 
-
-  #========================
+      - "water"
+      - "steam"
+      - "glycol"
+      - "refrigerant"
+      - "compressed air"
+      - "digester gas"
+      - "ozone"
 
   capacity:
   
@@ -34,10 +30,6 @@ properties:
       - type: number
     description: Indicates the size capacity of the pressure vessel in Litres
 
-    $comment: 
-
-  #========================
-
   max_pressure:
   
     oneOf:
@@ -45,17 +37,9 @@ properties:
       - type: number
     description: Indicates the maximum operating pressure for the pressure vessel in psi
 
-    $comment: 
-
-  #========================
-
-  tssa_crn:
+  TSSA_CRN:
   
     oneOf:
       - type: null
       - type: string
     description: Indicates the CRN number issued by the TSSA
-
-    $comment: 
-
-  #========================
