--- a/4-Class_Dependent_Specifications/14_pressure_piping.yml
+++ b/4-Class_Dependent_Specifications/14_pressure_piping.yml
@@ -1,7 +1,7 @@
 ---
 $schema: "http://json-schema.org/draft-07/schema#"
 title: pressure_piping
-$id: https://raw.githubusercontent.com/TW-ASMP/TWmaximoConfig/main/4-Class_Dependent_Specifications/14_pressure_piping.yml
+$id: https://raw.githubusercontent.com/TW-ASMP/TWDM/main/4-Class_Dependent_Specifications/14_pressure_piping.yml
 type: object
 
 $comment: >
@@ -15,10 +15,6 @@ properties:
       - type: number
     description: Indicates the maximum pipe size in inches
 
-    $comment:
-
-  #========================
-
   max_pressure:
 
     oneOf:
@@ -26,20 +22,12 @@ properties:
       - type: number
     description: Indicates the maximum working pressure within the pressure piping in kPa
 
-    $comment:
-
-  #========================
-
   max_temperature:
 
     oneOf:
       - type: null
       - type: number
     description: Indicates the maximum medium temperature within the pressure piping in degrees celsius
-
-    $comment:
-
-  #========================
 
   contained_medium:
   
@@ -56,16 +44,12 @@ properties:
       - "Digester Gas"
       - "Ozone"
 
-    $comment: 
-
-  #========================
-
   special_application:
   
     oneOf:
       - type: null
       - type: string
-    description: Indicates the speical application required for pressure piping
+    description: Indicates the special application required for pressure piping
     enum:
       - "piping in fire protection system"
       - "piping in heating system"
@@ -74,17 +58,9 @@ properties:
       - "hot oil piping"
       - "buried water piping"
 
-    $comment: 
-
-  #========================
-
-  tssa_crn:
+  TSSA_CRN:
   
     oneOf:
       - type: null
       - type: string
     description: Indicates the CRN number issued by the TSSA
-
-    $comment: 
-
-  #========================
